--- a/experimental/task02/style.css
+++ b/experimental/task02/style.css
@@ -32,16 +32,20 @@ body {
     background: #2c6f78;
     border-radius: 50%;
 }
-.nav .nav-menu {
-}
 .nav .nav-menu ul{
     list-style: none;
-    font-size: 16px;
     color: #ffffff;
 }
-.nav .nav-menu li{
-    display: inline;
+.nav .nav-menu .nav-menu-item{
+    display: inline-block;
+    font-size: 20px;
     margin-left: 50px;
+    vertical-align: bottom;
+}
+.nav .nav-menu .nav-menu-item .nav-icon-dropdown{
+    vertical-align: bottom;
+    width: 22px;
+    padding: 2px;
 }
 
 .banner {
@@ -118,8 +122,6 @@ body {
 .carousel {
     margin: 20px auto 0px;
 }
-.carousel .carousel-container{
-}
 .carousel-content .carousel-item {
     display: none;
     position: relative;
@@ -187,12 +189,100 @@ body {
     display: block;
 }
 
-.table {
-    margin-top: 40px;
+.table table{
+    margin-top: 20px;
+    box-sizing: border-box;
+    border-collapse: collapse;
 }
+.table caption {
+    text-align: left;
+    font-size: 18px;
+    margin: 20px;
+}
+.table thead {
+    margin-top: 40px;
+    border-top: 1px solid #666666;
+}
+.table tr {
+    border-bottom: 1px solid #d6d6d6;
+}
+.table th, td {
+    padding: 20px 40px;
+    width: 25%;
+    text-align: center;
+}
+.table th {
+    font-size: 18px;
+}
+.table td {
+    font-size: 14px;
+}
+.table th:nth-child(odd), td:nth-child(odd) {
+    background: #eeeeee;
+}
+.table tfoot .price-free {
+    color: #417505;
+}
+.table tfoot .price-personal {
+    color: #4a90e2;
+}
+.table tfoot .price-company {
+    color: #d0021b;
+}
+
 
 .form {
     margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+}
+.form .form-left {
+    width: 100%;
+    background-image: -webkit-gradient(linear, left, right, from(#6f839f), to(#ffffff));
+    background-image: -webkit-linear-gradient(left, #6f839f, #ffffff);
+    background-image: -moz-linear-gradient(left, #6f839f, #ffffff);
+    background-image: linear-gradient(to right, #6f839f, #ffffff);
+}
+.form .form-container {
+    margin: 40px 80px;
+}
+.form-container .form-item{
+    margin-top: 15px;
+    /* 同上，解决0宽、0高的triangel down默认大小的问题 */
+    font-size: 0px;
+}
+.form-container .form-item input{
+    width: 220px;
+    height: 36px;
+    padding-left: 20px;
+    font-size: 12px;
+}
+.triangle-down {
+    width: 0;
+    height: 0;
+    border-left: 9px solid transparent;
+    border-right: 9px solid transparent;
+    border-top: 14px solid #999999;
+    border-bottom: 0px;
+    vertical-align: bottom;
+    line-height: 20px;
+    margin-left: -30px;
+}
+.form-container #submit {
+    width: 100px;
+    margin-left: 6px;
+    padding-left: 0px;
+    border-radius: 6px;
+    height: 38px;
+    font-size: 14px;
+    color: #ffffff;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#5194e3));
+    background-image: -webkit-linear-gradient(top, #ffffff, #5194e3);
+    background-image: -moz-linear-gradient(top, #ffffff, #5194e3);
+    background-image: linear-gradient(to bottom, #ffffff, #5194e3);
+}
+.form .form-right img {
+    vertical-align: bottom;
 }
 
 footer {
