--- a/experimental/task02/style.css
+++ b/experimental/task02/style.css
@@ -26,7 +26,7 @@ body {
     height: 50px;
     line-height: 50px;
     font-size: 32px;
-    font-family: Brush Script Std, Brush Script MT, cursive;
+    font-family: "Brush Script Std", "Brush Script MT", cursive;
     text-align: center;
     color: #ffffff;
     background: #2c6f78;
@@ -206,7 +206,8 @@ body {
 .table tr {
     border-bottom: 1px solid #d6d6d6;
 }
-.table th, td {
+.table th,
+.table td {
     padding: 20px 40px;
     width: 25%;
     text-align: center;
