--- a/experimental/task12/css/main.css
+++ b/experimental/task12/css/main.css
@@ -1,6 +1,14 @@
+html {
+
+}
+
 body {
     margin: 0;
     font-size: 1.4em;
+}
+
+body * {
+    box-sizing: border-box;
 }
 
 .container {
@@ -8,9 +16,14 @@ body {
 }
 
 .title {
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    width: 100%;
+    height: 3rem;
     background-color: #d9d9d9;
     text-align: center;
-    position: relative;
+    /* position: relative; */
     font-size: 1em;
     font-weight: bold;
     padding: 0.5em;
@@ -33,15 +46,21 @@ body {
     left: 0;
 }
 
+.main-content {
+    margin: 3rem 0;
+}
+
 .filter > * {
     display: flex;
     justify-content: space-between;
-    padding: 0.5em;
+    padding: 0.2em;
 }
 
 .filter-item {
     display: inline;
-    flex-grow: 1;
+    padding: 0.3em;
+    /* text-align: center; */
+    flex: 1;
 }
 
 #priority {
@@ -52,23 +71,45 @@ body {
     background-color: #edfeec;
 }
 
-.main-content {
-    /* padding: 0.3em; */
-}
-
-.content {
-    padding: 0.3em;
+[class^=icon-] {
+    vertical-align: middle;
 }
 
 .icon-circle {
     display: inline-block;
-    border-radius: 1000px;
+    border-radius: 1em;
     width: 1em;
     height: 1em;
 }
 
 .icon-triangle {
-    border-top: 1em;
+    display: inline-block;
+    box-sizing: border-box;
+    border-style: solid;
+    border-color: #d9d9d9;
+    border-width: 0.5em 0 0.5em 1em;
+    border-color: transparent transparent transparent #d9d9d9;
+    width: 1em;
+    height: 1em;
+}
+
+.icon-pause {
+    display: inline-block;
+    border-color: transparent transparent transparent #d9d9d9;
+    border-width: 0 0 0 1em;
+    border-style: double;
+    box-sizing: border-box;
+    width: 1em;
+    height: 1em;
+}
+
+.icon-rectangle {
+    display: inline-block;
+    border-color: #d9d9d9;
+    border-width: 1px;
+    border-style: solid;
+    width: 1em;
+    height: 1em;
 }
 
 .bg-red {
@@ -83,11 +124,71 @@ body {
     background: green;
 }
 
+.bd-red {
+    border-color: red;
+}
+
+.bd-yellow {
+    border-color: yellow;
+}
+
+.bd-green {
+    border-color: green;
+}
+
+.bd-left-red {
+    border-color: transparent transparent transparent red;
+}
+
+.bd-left-yellow {
+    border-color: transparent transparent transparent yellow;
+}
+
+.bd-left-green {
+    border-color: transparent transparent transparent green;
+}
+
+.content-list {
+    margin: 0;
+    border: 1px solid #d9d9d9;
+}
+
+.content-item {
+    position: relative;
+    margin: 0.3em;
+    padding: 0.3em;
+    border: 1px solid #d9d9d9;
+    min-height: 5em;
+}
+
+.content-icon {
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    left: 0.5em;
+    transform: translateY(-50%);
+}
+
+.content-paragraph {
+    display: inline-block;
+    position: absolute;
+    left: 2em;
+    right: 0em;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+}
+
 .footer {
+    z-index: 999;
     background: #CCC;
     width: 100%;
     position: fixed;
     bottom: 0;
+    height: 3rem;
     padding: 0.5em;
     display: flex;
     justify-content: space-between;
